Fixed games not showing cover by adding conditional, also added Footer

--- a/src/GameComponents/Row.css
+++ b/src/GameComponents/Row.css
@@ -4,5 +4,14 @@ ul {
 
 .gamecard {
     padding: 0.5rem;
+    border-style: dot-dash;
+    border-width: 0.1rem;
+    flex: 0;
 }
+
+.gamecard-image {
+    position: relative;
+}
+
+
 
